layout issues

--- a/css/site.less
+++ b/css/site.less
@@ -217,7 +217,6 @@ a.button{
 					}
 				}
 			}
-			
 		}
 
 		a{
@@ -248,8 +247,8 @@ a.button{
 
 		}
 		li[rel="#url"]{
-				display: none;
-			}
+			display: none;
+		}
 
 	}
 	h1 {
@@ -302,9 +301,9 @@ a.button{
 	#url {
 		text-align: center;
 		width: 100%;
-		padding: 40px 0;
+		padding: 130px 0;
 		a {
-			font-size: 20px;
+			font-size: 25px;
 			font-weight: 400;
 		}
 	}
